# agent

./: README.md
.github/workflows/: ci.yml  release.yml
collector/: README.md  config.yaml
launchd/: README.md  sh.superlog.agent.plist
superlog-log/: Cargo.toml
superlog-log/src/: main.rs
